Fix some unnecessary selector nesting and adapt scrollbars for dark

--- a/TASVideos/wwwroot/css/partials/_darkmode.scss
+++ b/TASVideos/wwwroot/css/partials/_darkmode.scss
@@ -17,6 +17,7 @@
 	--bs-gray-200: #{$dark};
 	--tasvideos-bg-gradient: #{$banner};
 	--tab-content-bg: #{$bs-table-striped-bg-dark};
+	color-scheme: dark;
 }
 
 a {
